--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,10 @@
-asttokens==2.2.1
-attrs==23.2.0
-autopep8==2.0.2
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.0.7
-customtkinter==5.2.2
-cycler==0.11.0
 Cython==0.29.23
-darkdetect==0.8.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-executing==1.2.0
-fastjsonschema==2.19.1
-fonttools==4.39.3
-idna==3.6
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-ipykernel==6.22.0
-ipython==8.12.3
-jedi==0.18.2
-Jinja2==3.1.3
-joblib==1.3.2
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyterlab_pygments==0.3.0
+joblib==1.0.1
 keyboard==0.13.5
-kiwisolver==1.4.4
-MarkupSafe==2.1.5
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
 MetaTrader5==5.0.44
-mistune==3.0.2
-MouseInfo==0.1.3
 mplfinance==0.12.9b1
-nbclient==0.9.0
-nbconvert==7.16.1
-nbformat==5.9.2
-nest-asyncio==1.5.6
 numpy==1.24.2
-packaging==23.1
 pandas==1.2.4
-pandas-ta==0.3.14b0
-pandocfilters==1.5.1
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.5.0
-pipreqs==0.5.0
-platformdirs==3.5.0
-prompt-toolkit==3.0.38
-psutil==5.9.5
-pure-eval==0.2.2
-PyAutoGUI==0.9.53
-pycodestyle==2.10.0
-PyGetWindow==0.0.9
-Pygments==2.15.1
-PyMsgBox==1.0.9
-pyparsing==3.0.9
-pyperclip==1.8.2
-PyRect==0.2.0
-PyScreeze==0.1.28
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytweening==1.0.7
 pytz==2021.1
-pywin32==306
-pyzmq==25.0.2
-referencing==0.33.0
-requests==2.31.0
-rpds-py==0.18.0
-scikit-learn==1.3.2
-scipy==1.11.4
-seaborn==0.12.2
-six==1.16.0
-sklearn==0.0
-soupsieve==2.5
-stack-data==0.6.2
-TA_Lib-0.4.24-cp39-cp39-win_amd64.whl
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.3.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-urllib3==2.2.1
-wcwidth==0.2.6
-webencodings==0.5.1
-yarg==0.1.9
-zipp==3.15.0
+setuptools==65.3.0
+TA_Lib==0.4.24
